@@ -361,6 +361,15 @@ INITGAME(macgalxy,dispMAC,FLIP_SW(FLIP_L),2)
 MAC_COMPORTS(macgalxy, 1)
 CORE_GAMEDEFNV(macgalxy, "MAC's Galaxy", 1986, "MAC S.A.", mac0, 0)
 
+ROM_START(macjungl)
+  NORMALREGION(0x10000, REGION_CPU1)
+    ROM_LOAD("jungle1.bin", 0x0000, 0x2000, CRC(461a3e1b) SHA1(96981b4d8db0412c474169eaf5e5386be5006ffe))
+    ROM_LOAD("jungle2.bin", 0x2000, 0x2000, CRC(26b53e6e) SHA1(e588787b2381c0e6a42590f0e7d18d2a74ebf5f0))
+ROM_END
+INITGAME(macjungl,dispMAC,FLIP_SW(FLIP_L),2)
+MAC_COMPORTS(macjungl, 1)
+CORE_GAMEDEFNV(macjungl, "MAC Jungle", 1986, "MAC S.A.", mac0, 0)
+
 ROM_START(spctrain)
   NORMALREGION(0x10000, REGION_CPU1)
     ROM_LOAD("mbm27128.25", 0x0000, 0x4000, CRC(d65c5c36) SHA1(6f350b48daaecd36b3086e682ec6ee174f297a34))
